# espn-api-v3

./: .env_template  .gitignore  .mcp.json  .python-version  CLAUDE.md  CODE_OF_CONDUCT.md  FFanalytics_Values.csv  FFanalytics_week2.csv  FantasySP_values1.csv  Firefly.xlsx  LICENSE  NOT_requirements_NOT.txt  Playoff_draft.ipynb  Procfile  README.md  REDESIGN_PLAN.md  app.py  authorize.py  build.sh  conftest.py  db.sqlite3  league.py  league_response.json  login.csv  luck_index.py  main.py  manage.py  monte_carlo.py  myFantasyAPI.py  new espn.ipynb  package-lock.json  package.json  pick_value.csv  player.py  playerID.py  playerValues.csv  powerrankings.md  powerrankings.txt  pyproject.toml  railway.json  (+8 more)
.github/workflows/: black.yml  django.yml  frontend-tests.yml  linting.yml  pytest.yml  python-app.yml
.ipynb_checkpoints/: new espn-checkpoint.ipynb
backend/: fix_team_memberships.py
backend/accounts/: apps.py  backends.py  decorators.py  models.py  serializers.py  urls.py  views.py
backend/doritostats/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/fantasy_stats/: apps.py  middleware.py  models.py  sitemaps.py  tests.py  urls.py  views.py
backend/playoff_pool/: admin.py  apps.py  cache_utils.py  models.py  nfl_utils.py  players.py  scoring.py  serializers.py  urls.py  views.py
backend/tests/: conftest.py  test_analytic_utils.py  test_auth.py  test_fetch_utils.py  test_luck_index.py
code/: app.py  jeremy_fantasy_football.csv  new espn.ipynb  team_functions.py  testing.py  util_functions.py
code/.ipynb_checkpoints/: new espn-checkpoint.ipynb
doritostats/: .env_template  Procfile  analytic_utils.py  asgi.py  db.sqlite3  filter_utils.py  luck_index.py  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
doritostats/doritostats/: settings.py  urls.py
doritostats/fantasy_stats/: admin.py  models.py  tests.py  urls.py  util_functions.py  views.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
fantasy_stats/: admin.py  apps.py  models.py  tests.py  urls.py  util_functions.py  views.py
fantasy_stats/email_notifications/: email.py  new_league_added.txt
fantasy_stats/migrations/: 0001_initial.py  0002_leagueinfo.py
fantasy_stats/templatetags/: filters.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  test.html
frontend/src/: App.css  App.js  App.test.js  ErrorBoundary.js  api.js  index.js  setupTests.js
old_code/: app.py  authorize.py  player.py
old_code/utils/: building_utils.py  printing_utils.py  sorting_utils.py
old_django_templates/errors/: 404.html
old_django_templates/fantasy_stats/: index.html  season_stats.html
past_rankings/: week10.csv  week11.csv  week12.csv  week13.csv  week14.csv  week15.csv  week2.csv  week3.csv  week4.csv  week5.csv  week6.csv  week7.csv  week8.csv  week9.csv
src/: new espn.ipynb
src/.ipynb_checkpoints/: new espn-checkpoint.ipynb
src/doritostats/: PseudoTeam.py  analytic_utils.py  django_utils.py  (+12 more)
static/: all_leagues.html  asset-manifest.json  index.html  precache-manifest.cf96ca6897cd25c8056443e75be76325.js  service-worker.js  simulation.html
tests/: test_analytic_utils.py  test_fetch_utils.py  test_luck_index.py  test_pytest.py
twitter_sentiment/: apps.py  urls.py  util_functions.py  views.py
utils/: building_utils.py  printing_utils.py  sorting_utils.py
values/: week1.csv  week10.csv  week11.csv  week12.csv  week13.csv  week14.csv  week15.csv  week2  week2.csv  week3  week3.csv  week4.csv  week5.csv  week6.csv  week7.csv  week8.csv  week9.csv
(+165 files in other folders)
