[tool.poetry]
name = "espn-api-v3"
version = "3.0.1"
description = "This project aims to make ESPN Fantasy Football statistics easily available. With the introduction of version 3 of the ESPN's API, this structure creates leagues, teams, and player classes that allow for advanced data analytics and the potential for many new features to be added."
authors = ["Desi Pilla <desi.m.pilla@gmail.com>"]
license = "https://github.com/DesiPilla/espn-api-v3/blob/master/LICENSE"
readme = "README.md"
packages = [{ from = "src", include = "doritostats" }]

[tool.poetry.dependencies]
python = "^3.10"
espn-api = "^0.24.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
pytest = "^7.1.3"
requests = "^2.28.1"
tabulate = "^0.9.0"
python-dotenv = "^0.21.0"

Django = "^4.1.2"
django-on-heroku = "^1.1.2"
joblib = "^1.2.0"
gunicorn = "^20.1.0"
whitenoise = { extras = ["brotli"], version = "^6.2.0" }

# [[tool.poetry.source]]
# name = "foo"
# url = "https://pypi.example.org/simple/"
# default = true
# secondary = false
setuptools = "^65.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
