[tool.poetry]
name = "doritostats"
version = "3.3.1"
description = "This project aims to make ESPN Fantasy Football statistics easily available. With the introduction of version 3 of the ESPN's API, this structure creates leagues, teams, and player classes that allow for advanced data analytics and the potential for many new features to be added."
authors = ["Desi Pilla <desi.m.pilla@gmail.com>"]
license = "https://github.com/DesiPilla/espn-api-v3/blob/master/LICENSE"
readme = "README.md"
packages = [{ include = "src" }, { from = "src", include = "doritostats" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
espn-api = "^0.34.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
pytest = "^7.1.3"
requests = "^2.28.1"
scikit-learn = "^1.3.2"
tabulate = "^0.9.0"
python-dotenv = "^0.21.0"

Django = "^4.2.11"
joblib = "^1.2.0"
gunicorn = "^20.1.0"
whitenoise = { extras = ["brotli"], version = "^6.2.0" }
setuptools = "^65.6.0"
urllib3 = "2.0.7"
black = "^23.10.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
scipy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
