[tool.poetry]
name = "doritostats"
version = "3.5.3"
description = "This project aims to make ESPN Fantasy Football statistics easily available. With the introduction of version 3 of the ESPN's API, this structure creates leagues, teams, and player classes that allow for advanced data analytics and the potential for many new features to be added."
authors = ["Desi Pilla <desi.m.pilla@gmail.com>"]
license = "https://github.com/DesiPilla/espn-api-v3/blob/master/LICENSE"
readme = "README.md"
packages = [{ include = "src" }, { from = "src", include = "doritostats" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
espn-api = "0.40.1"
numpy = "^2.1.2"
pandas = "^2.2.2"
pytest = "^8.3.3"
python-dotenv = "^0.21.0"
requests = "^2.32.3"
scikit-learn = "^1.5.0"

black = "24.3.0"
certifi = "^2024.8.30"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
joblib = "^1.4.2"
scipy = "^1.14.1"
setuptools = "^75.2.0"
sqlalchemy = "^2.0.36"
urllib3 = "^2.2.3"
whitenoise = { extras = ["brotli"], version = "^6.7.0" }
Django = "^5.1.2"
psycopg2-binary = "^2.9.10"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
